--- a/index.html
+++ b/index.html
@@ -3,38 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Конвертер в WebP</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Конвертер изображений</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
+        .drop-zone {
+            background: linear-gradient(135deg, #f6f8fb 0%, #f1f4f9 100%);
+            border: 2px dashed #cbd5e1;
+            transition: all 0.3s ease;
+        }
+        .drop-zone:hover, .drop-zone.dragover {
+            border-color: #3b82f6;
+            background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%);
+        }
+        input[type="range"] {
+            -webkit-appearance: none;
+            height: 6px;
+            background: #e2e8f0;
+            border-radius: 3px;
+            outline: none;
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 18px;
+            height: 18px;
+            background: #3b82f6;
+            border-radius: 50%;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(59, 130, 246, 0.3);
+        }
+        .preview-item {
+            transition: all 0.3s ease;
+        }
+        .preview-item:hover {
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        }
+    </style>
 </head>
-<body>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header bg-primary text-white">
-                        <h3 class="mb-0">Конвертер изображений в WebP</h3>
+<body class="bg-gradient-to-br from-gray-50 to-gray-100 min-h-screen">
+    <div class="container mx-auto px-4 py-12">
+        <div class="max-w-3xl mx-auto">
+            <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
+                <div class="bg-gradient-to-r from-blue-600 to-indigo-600 px-8 py-6">
+                    <h1 class="text-3xl font-bold text-white flex items-center">
+                        <i class="fas fa-image mr-3"></i>
+                        Конвертер изображений
+                    </h1>
+                </div>
+                
+                <div class="p-8">
+                    <div id="dropZone" class="drop-zone rounded-xl p-10 text-center cursor-pointer">
+                        <input type="file" id="fileInput" multiple accept="image/*" class="hidden">
+                        <div class="space-y-4">
+                            <i class="fas fa-cloud-upload-alt text-6xl text-blue-400"></i>
+                            <h4 class="text-xl font-medium text-gray-700">Перетащите изображения сюда или нажмите для выбора</h4>
+                            <p class="text-sm text-gray-500">Поддерживаются форматы: JPG, PNG, GIF</p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <div class="upload-area" id="dropZone">
-                            <input type="file" id="fileInput" multiple accept="image/*" class="d-none">
-                            <div class="text-center">
-                                <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
-                                <h4>Перетащите изображения сюда или нажмите для выбора</h4>
-                                <p class="text-muted">Поддерживаются форматы: JPG, PNG, GIF</p>
+
+                    <div class="mt-8 space-y-8">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                            <div class="bg-gray-50 p-6 rounded-xl">
+                                <label for="format" class="block text-sm font-medium text-gray-700 mb-3">
+                                    <i class="fas fa-file-image mr-2 text-blue-500"></i>
+                                    Формат выходного файла
+                                </label>
+                                <select id="format" name="format" class="w-full rounded-lg border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 bg-white">
+                                    <option value="webp">WebP</option>
+                                    <option value="avif">AVIF</option>
+                                    <option value="jpeg">JPEG</option>
+                                    <option value="png">PNG</option>
+                                </select>
+                            </div>
+                            <div class="bg-gray-50 p-6 rounded-xl">
+                                <label for="quality" class="block text-sm font-medium text-gray-700 mb-3">
+                                    <i class="fas fa-sliders-h mr-2 text-blue-500"></i>
+                                    Качество (0-100%)
+                                </label>
+                                <input type="range" id="quality" name="quality" class="w-full" min="0" max="100" value="80">
+                                <div class="text-center text-sm font-medium text-gray-700 quality-value mt-3">80%</div>
                             </div>
                         </div>
-                        <div id="preview" class="mt-4"></div>
-                        <div class="progress mt-3 d-none" id="progressBar">
-                            <div class="progress-bar" role="progressbar" style="width: 0%"></div>
+                    </div>
+
+                    <div id="preview" class="mt-8 space-y-4"></div>
+                    
+                    <div id="progressBar" class="mt-6 hidden">
+                        <div class="w-full bg-gray-200 rounded-full h-2">
+                            <div class="bg-blue-600 h-2 rounded-full transition-all duration-300" style="width: 0%"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/your-code.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html> 
