--- a/index.html
+++ b/index.html
@@ -8,90 +8,127 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         .drop-zone {
-            background: linear-gradient(135deg, #f6f8fb 0%, #f1f4f9 100%);
-            border: 2px dashed #cbd5e1;
-            transition: all 0.3s ease;
+            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+            border: 2px dashed #94a3b8;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            backdrop-filter: blur(8px);
         }
         .drop-zone:hover, .drop-zone.dragover {
-            border-color: #3b82f6;
+            border-color: #2563eb;
             background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
         input[type="range"] {
             -webkit-appearance: none;
-            height: 6px;
+            height: 8px;
             background: #e2e8f0;
-            border-radius: 3px;
+            border-radius: 4px;
             outline: none;
         }
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
-            width: 18px;
-            height: 18px;
-            background: #3b82f6;
+            width: 20px;
+            height: 20px;
+            background: #2563eb;
             border-radius: 50%;
             cursor: pointer;
-            box-shadow: 0 2px 4px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 4px 6px -1px rgba(37, 99, 235, 0.3);
+            transition: all 0.2s ease;
+        }
+        input[type="range"]::-webkit-slider-thumb:hover {
+            transform: scale(1.1);
         }
         .preview-item {
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
         }
         .preview-item:hover {
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            transform: translateY(-2px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+        }
+        .gradient-text {
+            background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .glass-effect {
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        .history-item {
+            transition: all 0.3s ease;
+        }
+        .history-item:hover {
+            transform: translateX(5px);
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-gray-50 to-gray-100 min-h-screen">
+<body class="bg-gradient-to-br from-slate-50 via-blue-50 to-indigo-50 min-h-screen">
     <div class="container mx-auto px-4 py-12">
-        <div class="max-w-3xl mx-auto">
-            <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
-                <div class="bg-gradient-to-r from-blue-600 to-indigo-600 px-8 py-6">
-                    <h1 class="text-3xl font-bold text-white flex items-center">
-                        <i class="fas fa-image mr-3"></i>
+        <div class="max-w-4xl mx-auto">
+            <div class="glass-effect rounded-3xl shadow-2xl overflow-hidden">
+                <div class="bg-gradient-to-r from-blue-600 via-indigo-600 to-violet-600 px-8 py-8">
+                    <h1 class="text-4xl font-bold text-white flex items-center justify-center">
+                        <i class="fas fa-image mr-4"></i>
                         Конвертер изображений
                     </h1>
                 </div>
                 
                 <div class="p-8">
-                    <div id="dropZone" class="drop-zone rounded-xl p-10 text-center cursor-pointer">
+                    <div id="dropZone" class="drop-zone rounded-2xl p-12 text-center cursor-pointer">
                         <input type="file" id="fileInput" multiple accept="image/*" class="hidden">
-                        <div class="space-y-4">
-                            <i class="fas fa-cloud-upload-alt text-6xl text-blue-400"></i>
-                            <h4 class="text-xl font-medium text-gray-700">Перетащите изображения сюда или нажмите для выбора</h4>
+                        <div class="space-y-6">
+                            <i class="fas fa-cloud-upload-alt text-7xl text-blue-500"></i>
+                            <h4 class="text-2xl font-semibold text-gray-800">Перетащите изображения сюда</h4>
+                            <p class="text-base text-gray-600">или нажмите для выбора файлов</p>
                             <p class="text-sm text-gray-500">Поддерживаются форматы: JPG, PNG, GIF</p>
                         </div>
                     </div>
 
-                    <div class="mt-8 space-y-8">
+                    <div class="mt-12 space-y-8">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                            <div class="bg-gray-50 p-6 rounded-xl">
-                                <label for="format" class="block text-sm font-medium text-gray-700 mb-3">
-                                    <i class="fas fa-file-image mr-2 text-blue-500"></i>
+                            <div class="glass-effect p-8 rounded-2xl">
+                                <label for="format" class="block text-lg font-medium text-gray-800 mb-4">
+                                    <i class="fas fa-file-image mr-3 text-blue-500"></i>
                                     Формат выходного файла
                                 </label>
-                                <select id="format" name="format" class="w-full rounded-lg border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 bg-white">
+                                <select id="format" name="format" class="w-full rounded-xl border-gray-200 shadow-sm focus:border-blue-500 focus:ring-blue-500 bg-white text-lg">
                                     <option value="webp">WebP</option>
                                     <option value="avif">AVIF</option>
                                     <option value="jpeg">JPEG</option>
                                     <option value="png">PNG</option>
                                 </select>
                             </div>
-                            <div class="bg-gray-50 p-6 rounded-xl">
-                                <label for="quality" class="block text-sm font-medium text-gray-700 mb-3">
-                                    <i class="fas fa-sliders-h mr-2 text-blue-500"></i>
+                            <div class="glass-effect p-8 rounded-2xl">
+                                <label for="quality" class="block text-lg font-medium text-gray-800 mb-4">
+                                    <i class="fas fa-sliders-h mr-3 text-blue-500"></i>
                                     Качество (0-100%)
                                 </label>
                                 <input type="range" id="quality" name="quality" class="w-full" min="0" max="100" value="80">
-                                <div class="text-center text-sm font-medium text-gray-700 quality-value mt-3">80%</div>
+                                <div class="text-center text-lg font-medium text-gray-800 quality-value mt-4">80%</div>
                             </div>
                         </div>
                     </div>
 
-                    <div id="preview" class="mt-8 space-y-4"></div>
+                    <div id="preview" class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
                     
-                    <div id="progressBar" class="mt-6 hidden">
-                        <div class="w-full bg-gray-200 rounded-full h-2">
-                            <div class="bg-blue-600 h-2 rounded-full transition-all duration-300" style="width: 0%"></div>
+                    <div id="progressBar" class="mt-8 hidden">
+                        <div class="w-full bg-gray-200 rounded-full h-3">
+                            <div class="bg-gradient-to-r from-blue-500 to-indigo-500 h-3 rounded-full transition-all duration-300" style="width: 0%"></div>
                         </div>
+                    </div>
+
+                    <!-- Секция истории -->
+                    <div class="mt-16">
+                        <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
+                            <i class="fas fa-history mr-3 text-blue-500"></i>
+                            История конвертаций
+                        </h2>
+                        <div id="history" class="space-y-4"></div>
                     </div>
                 </div>
             </div>
