--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             backdrop-filter: blur(8px);
         }
-        .drop-zone:hover, .drop-zone.dragover {
+
+        .drop-zone:hover,
+        .drop-zone.dragover {
             border-color: #2563eb;
             background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%);
             transform: translateY(-2px);
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
+
         input[type="range"] {
             -webkit-appearance: none;
             height: 8px;
@@ -26,6 +29,7 @@
             border-radius: 4px;
             outline: none;
         }
+
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
             width: 20px;
@@ -36,32 +40,39 @@
             box-shadow: 0 4px 6px -1px rgba(37, 99, 235, 0.3);
             transition: all 0.2s ease;
         }
+
         input[type="range"]::-webkit-slider-thumb:hover {
             transform: scale(1.1);
         }
+
         .preview-item {
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             background: white;
             border-radius: 12px;
             overflow: hidden;
         }
+
         .preview-item:hover {
             transform: translateY(-2px);
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
+
         .gradient-text {
             background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+
         .glass-effect {
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
+
         .history-item {
             transition: all 0.3s ease;
         }
+
         .history-item:hover {
             transform: translateX(5px);
         }
@@ -77,7 +88,7 @@
                         Конвертер изображений
                     </h1>
                 </div>
-                
+
                 <div class="p-8">
                     <div id="dropZone" class="drop-zone rounded-2xl p-12 text-center cursor-pointer">
                         <input type="file" id="fileInput" multiple accept="image/*" class="hidden">
@@ -88,7 +99,6 @@
                             <p class="text-sm text-gray-500">Поддерживаются форматы: JPG, PNG, GIF</p>
                         </div>
                     </div>
-
                     <div class="mt-12 space-y-8">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                             <div class="glass-effect p-8 rounded-2xl">
@@ -96,7 +106,8 @@
                                     <i class="fas fa-file-image mr-3 text-blue-500"></i>
                                     Формат выходного файла
                                 </label>
-                                <select id="format" name="format" class="w-full rounded-xl border-gray-200 shadow-sm focus:border-blue-500 focus:ring-blue-500 bg-white text-lg">
+                                <select id="format" name="format"
+                                    class="w-full rounded-xl border-gray-200 shadow-sm focus:border-blue-500 focus:ring-blue-500 bg-white text-lg">
                                     <option value="webp">WebP</option>
                                     <option value="avif">AVIF</option>
                                     <option value="jpeg">JPEG</option>
@@ -108,21 +119,19 @@
                                     <i class="fas fa-sliders-h mr-3 text-blue-500"></i>
                                     Качество (0-100%)
                                 </label>
-                                <input type="range" id="quality" name="quality" class="w-full" min="0" max="100" value="80">
+                                <input type="range" id="quality" name="quality" class="w-full" min="0" max="100"
+                                    value="80">
                                 <div class="text-center text-lg font-medium text-gray-800 quality-value mt-4">80%</div>
                             </div>
                         </div>
                     </div>
-
                     <div id="preview" class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-                    
                     <div id="progressBar" class="mt-8 hidden">
                         <div class="w-full bg-gray-200 rounded-full h-3">
-                            <div class="bg-gradient-to-r from-blue-500 to-indigo-500 h-3 rounded-full transition-all duration-300" style="width: 0%"></div>
+                            <div class="bg-gradient-to-r from-blue-500 to-indigo-500 h-3 rounded-full transition-all duration-300"
+                                style="width: 0%"></div>
                         </div>
                     </div>
-
-                    <!-- Секция истории -->
                     <div class="mt-16">
                         <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
                             <i class="fas fa-history mr-3 text-blue-500"></i>
@@ -134,7 +143,6 @@
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
